--- a/style.css
+++ b/style.css
@@ -970,13 +970,20 @@ body #book-index #indice .col-main {
 /* Estandarizacion de iconos*/
 
 /* ICONOS CONTENIDO UNIDAD*/
-#layout-container div[id*="section-screen"] .section .section-content .tabs-content .content .resources-content .content-item .content-img {
+#layout-container div[id*="section-screen"] .section .section-content .tabs-content .content .unit-content .content-item .content-img,
+  #layout-container div[id*="section-screen"] .section .section-content .tabs-content .content .resources-content .content-item .content-img,
+   #layout-container div[id*=section-screen] .section .section-content .tabs-content .content.teacher-content .unit-content .content-item .content-img,
+    #layout-container div[id*=section-screen] .section .section-content .tabs-content .content.teacher-content .resources-content .content-item .content-img {
   background-color: black;
   background-image: none !important;
 }
+#layout-container div[id*="section-screen"] .section .section-content .tabs-content .content .unit-content .content-item .content-img,
+    #layout-container div[id*=section-screen] .section .section-content .tabs-content .content.teacher-content .unit-content .content-item .content-img {
+  background-color: var(--MainColor);
+}
 
- #layout-container div[id*="section-screen"] .section .section-content .tabs-content .content .resources-content .content-item .content-img,
-  #layout-container div[id*="section-screen"] .section .section-content .tabs-content .content .resources-content .content-item .content-img,
+ #layout-container div[id*="section-screen"] .section .section-content .tabs-content .content .resources-content .content-item .content-img:before,
+  #layout-container div[id*="section-screen"] .section .section-content .tabs-content .content .resources-content .content-item .content-img:before,
    #layout-container div[id*=section-screen] .section .section-content .tabs-content .content.teacher-content .resources-content .content-item .content-img:before,
     #layout-container div[id*=section-screen] .section .section-content .tabs-content .content.teacher-content .unit-content .content-item .content-img:before {
   background-color: transparent;
